--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<version>1.18.30</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.3.0.0</version>
+		</dependency>
 
 	</dependencies>
 
