--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -1,43 +1,23 @@
 //Padrao=
-label.empresa=Escolha a empresa associada
 botao.salvar=Salvar
 botao.cancelar=Cancelar
 
 
-//index.html=
-navbar.brand=HyperReach
-navbar.home=Início
-navbar.register=Cadastrar
-table.title=Nossas Empresas Parceiras
-table.name=Nome
-table.size=Tamanho
-table.sector=Setor
-table.location=Localização
-table.num_employees=Número de Funcionários
-table.type=Tipo de Empresa
-table.client=Cliente
-table.actions=Ações
-button.details=Detalhes
-button.edit=Editar
-button.remove=Remover
-
-
+//Empresa_model=
+empresa.nome.size=O nome deve ter entre 4 e 255 caracteres
+empresa.nome.notEmpty=O nome da empresa é obrigatório
+empresa.loc.notEmpty=A localização geográfica é obrigatória
+empresa.numFun.positive=O número de funcionários deve ser maior ou igual a zero
+empresa.numFun.notEmpty=O número de funcionários é obrigatório
 //criar_empresa.html=
-page.title=Cadastrar Nova Empresa
-form.header=Cadastrar Nova Empresa
-form.label.nome=Qual é o nome da empresa?
-form.label.tamanho=Qual é o tamanho da empresa?
-form.label.setor=Qual é o setor de atividade da empresa?
-form.label.localizacaoGeografica=Onde a empresa está localizada?
-form.label.numeroFuncionarios=Quantos funcionários a empresa possui?
-form.label.tipoEmpresa=Qual é o tipo da empresa?
-form.label.cliente=Esta empresa é nossa cliente?
-validation.nome.required=O nome da empresa é obrigatório e deve ter de 4 a 255 caracteres.
-validation.tamanho.required=O tamanho da empresa é obrigatório.
-validation.setor.required=O setor de atividade é obrigatório.
-validation.localizacaoGeografica.required=A localização geográfica é obrigatória.
-validation.numeroFuncionarios.required=O número de funcionários é obrigatório e deve ser um número positivo.
-validation.tipoEmpresa.required=O tipo da empresa é obrigatório.
+empresa.title=Cadastrar Nova Empresa
+empresa.nome=Qual é o nome da empresa?
+empresa.tamanho=Qual é o tamanho da empresa?
+empresa.setor=Qual é o setor de atividade da empresa?
+empresa.localizacaoGeografica=Onde a empresa está localizada?
+empresa.numeroFuncionarios=Quantos funcionários a empresa possui?
+empresa.tipoEmpresa=Qual é o tipo da empresa?
+empresa.cliente=Esta empresa é nossa cliente?
 tamanho.micro=Micro
 tamanho.pequeno=Pequeno
 tamanho.medio=Médio
@@ -54,58 +34,81 @@ setor.industrial=Industrial
 setor.rural=Rural
 setor.servicos=Serviços
 setor.outros=Outros
-button.save=Salvar
 
-
+//Comportamento_model=
+comportamento.interacoes.notNull=O número de interações na plataforma é obrigatório
+comportamento.interacoes.positive=O número de interações na plataforma deve ser maior ou igual a zero
+comportamento.frequencia.min=A frequência de uso deve ser zero ou positiva
+comportamento.frequencia.max=A frequência de uso deve ser menor ou igual a 10
+comportamento.frequencia.notNull=A frequência de uso é obrigatória
+comportamento.feedback.notBlank=O feedback é obrigatório
 //criar_comportamento.html=
-titulo.comportamento=Comportamento de Negócios
-label.interacoesPlataforma=Quantas interações a empresa teve na plataforma?
-label.frequenciaUso=Qual a frequência de uso da plataforma? (Numa escala de 1 a 10)
-label.feedback=Comentários e opiniões sobre a plataforma
-selecioneOpcao.label=Selecione uma opção
-usoRecursosEspecificos.label=Você utiliza algum recurso específico?
+comportamento.titulo=Comportamento de Negócios
+comportamento.interacoesPlataforma=Quantas interações a empresa teve na plataforma?
+comportamento.frequenciaUso=Qual a frequência de uso da plataforma? (Numa escala de 1 a 10)
+comportamento.feedback=Comentários e opiniões sobre a plataforma
+comportamento.usoRecursos=Você utiliza algum recurso específico?
+comportamento.selecioneOpcao=Selecione uma opção
 opcoesRecursos.sim=Sim
 opcoesRecursos.nao=Não
-erroInteracoesPlataforma=O número de interações na plataforma é obrigatório.
-erroFrequenciaUso=A frequência de uso é obrigatória e deve estar entre 1 e 10.
-erroFeedback=A opinião é obrigatório e não pode estar vazio.
-erroUsoRecursosEspecificos=O uso de recursos específicos é obrigatório.
 
-
+//Desempenho_model=
+desempenho.receita.positive=A receita deve ser maior ou igual a zero
+desempenho.receita.notNull=A receita é obrigatória
+desempenho.lucro.positive=O lucro deve ser maior ou igual a zero
+desempenho.lucro.notNull=O lucro é obrigatório
+desempenho.crescimento.min=O crescimento deve ser maior ou igual a zero
+desempenho.crescimento.max=O crescimento deve ser menor ou igual a 100
+desempenho.crescimento.notNull=O crescimento é obrigatório
 //criar_desempenho.html=
-titulo.Desempenho=Desempenho Financeiro
-label.receita=Qual é a receita total?
-label.lucro=Qual foi o lucro em reais (R$)?
-label.crescimento=Qual foi o crescimento percentual?
-erro.receita=A receita é obrigatória e deve ser um número positivo.
-erro.lucro=O lucro é obrigatório e deve ser um número positivo.
-erro.crescimento=O crescimento é obrigatório e deve esta entre 0% e 100%.
+desempenho.titulo=Desempenho Financeiro
+desempenho.receita=Qual é a receita total?
+desempenho.lucro=Qual foi o lucro em reais (R$)?
+desempenho.crescimento=Qual foi o crescimento percentual?
 
-
+//Historico_model=
+historico.proposta.notBlank=A proposta de negócio é obrigatória
+historico.feedback.notBlank=O feedback é obrigatório
 //criar_historico.html=
 historico.titulo = Histórico de Interações
 historico.proposta_negocio = Qual é a proposta de negócio?
 historico.contrato_assinado = Contrato Assinado:
-historico.feedback_servicos_produtos = Opinião sobre Serviços e Produtos
 historico.selecione_opcao = Selecione uma opção
-historico.salvar = Salvar
-historico.cancelar = Cancelar
 opcoesContrato.sim=Sim
 opcoesContrato.nao=Não
-propostaNegocio.invalida=A proposta de negócio é obrigatória
-contratoAssinado.invalido=Opção de contrato inválida
-feedbackServicosProdutos.invalido=A Opinião sobre serviços e produtos é obrigatório
-empresa.id.invalido=ID da empresa inválido
+historico.feedback_servicos_produtos = Opinião sobre Serviços e Produtos
 
-
+//Tendencia_model=
+tendencia.ano.min=O ano deve ser maior ou igual a 1900
+tendencia.ano.max=O ano deve ser menor ou igual a 2025
+tendencia.ano.notNull=O ano é obrigatório
+tendencia.gastoMarketing.positive=O gasto com marketing deve ser maior ou igual a zero
+tendencia.gastoMarketing.notNull=O gasto com marketing é obrigatório
+tendencia.gastoAutomacao.positive=O gasto com automação deve ser maior ou igual a zero
+tendencia.gastoAutomacao.notNull=O gasto com automação é obrigatório
 //criar_tendencia.html=
-titulo.tendencia=Tendência de Gastos
-label.gastoMarketing=Gasto com Marketing:
-label.gastoAutomacao=Gasto com Automação:
-label.ano=Ano:
-erro.ano=O ano é obrigatório e deve estar entre 1900 e 2025
-erro.gastoMarketing=O gasto com Marketing é obrigatório e deve ser um número positivo
-erro.gastoAutomacao=O gasto com Automação é obrigatório e deve ser um número positivo
+tendencia.titulo=Tendência de Gastos
+tendencia.gastoMarketing=Gasto com Marketing:
+tendencia.gastoAutomacao=Gasto com Automação:
+tendencia.ano=Ano:
+
+
+//index.html=
+index.title=Nossas Empresas Parceiras
+index.navbar=HyperReach
+index.home=Início
+index.register=Cadastrar
+index.table.name=Nome
+index.table.size=Tamanho
+index.table.sector=Setor
+index.table.location=Localização
+index.table.num_employees=Número de Funcionários
+index.table.type=Tipo de Empresa
+index.table.client=Cliente
+index.table.actions=Ações
+index.details=Detalhes
+index.edit=Editar
+index.remove=Remover
 
 
 //Detalhes_Empresa=
@@ -128,13 +131,13 @@ gastos.editar=Editar
 gastos.deletar=Deletar
 gastos.criar_nova=Criar Tendência de Gastos
 
-desempenho.titulo=Desempenho Financeiro
-desempenho.receita=Receita:
-desempenho.lucro=Lucro:
-desempenho.crescimento=Crescimento:
-desempenho.editar=Editar
-desempenho.deletar=Deletar
-desempenho.criar_novo=Criar Desempenho Financeiro
+financeiro.titulo=Desempenho Financeiro
+financeiro.receita=Receita:
+financeiro.lucro=Lucro:
+financeiro.crescimento=Crescimento:
+financeiro.editar=Editar
+financeiro.deletar=Deletar
+financeiro.criar_novo=Criar Desempenho Financeiro
 
 historico.contrato=Contrato Assinado:
 historico.proposta=Proposta de Negócio:
@@ -143,14 +146,14 @@ historico.editar=Editar
 historico.deletar=Deletar
 historico.criar_novo=Criar Histórico de Interação
 
-comportamento.titulo=Comportamento de Negócios
-comportamento.interacoes=Interações na Plataforma:
-comportamento.frequencia=Frequência de Uso:
-comportamento.feedback=Feedback:
-comportamento.uso_recursos=Uso de Recursos Específicos:
-comportamento.editar=Editar
-comportamento.deletar=Deletar
-comportamento.criar_novo=Criar Comportamento de Negócios
+negocios.titulo=Comportamento de Negócios
+negocios.interacoes=Interações na Plataforma:
+negocios.frequencia=Frequência de Uso:
+negocios.feedback=Feedback:
+negocios.uso_recursos=Uso de Recursos Específicos:
+negocios.editar=Editar
+negocios.deletar=Deletar
+negocios.criar_novo=Criar Comportamento de Negócios
 
 button.voltar=Voltar para a lista
 
