atualizando a internacionalização de todas as classes

--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -11,6 +11,7 @@ empresa.numFun.positive=O número de funcionários deve ser maior ou igual a zero
 empresa.numFun.notEmpty=O número de funcionários é obrigatório
 //criar_empresa.html=
 empresa.title=Cadastrar Nova Empresa
+empresa.title.editar=Editar Empresa
 empresa.nome=Qual é o nome da empresa?
 empresa.tamanho=Qual é o tamanho da empresa?
 empresa.setor=Qual é o setor de atividade da empresa?
