--- a/src/main/resources/mensagens.properties
+++ b/src/main/resources/mensagens.properties
@@ -1,6 +1,9 @@
 //Padrao=
 botao.salvar=Salvar
-botao.cancelar=Cancelar
+
+//Usuario_model=
+usuario.nome.notEmpty=O nome é obrigatório
+usuario.username.notEmpty=O usuario é obrigatório
 
 
 //Empresa_model=
@@ -98,7 +101,8 @@ tendencia.ano=Ano:
 index.title=Nossas Empresas Parceiras
 index.navbar=HyperReach
 index.home=Início
-index.register=Cadastrar
+index.register=Cadastrar Empresa
+index.register2=Cadastrar Usuario
 index.table.name=Nome
 index.table.size=Tamanho
 index.table.sector=Setor
@@ -110,6 +114,7 @@ index.table.actions=Ações
 index.details=Detalhes
 index.edit=Editar
 index.remove=Remover
+teste=Tem certeza que deseja deletar esta empresa?
 
 
 //Detalhes_Empresa=
@@ -121,15 +126,12 @@ general_info.setor=Setor:
 general_info.localizacao=Localização:
 general_info.num_funcionarios=Número de Funcionários:
 general_info.tipo_empresa=Tipo de Empresa:
-general_info.cliente=Cliente:
 
 gastos.titulo=Tendências de Gastos
-gasto.ano=Ano 2024
 gastos.ano=Ano:
 gastos.marketing=Gasto em Marketing:
 gastos.automacao=Gasto em Automação:
 gastos.editar=Editar
-gastos.deletar=Deletar
 gastos.criar_nova=Criar Tendência de Gastos
 
 financeiro.titulo=Desempenho Financeiro
@@ -137,14 +139,12 @@ financeiro.receita=Receita:
 financeiro.lucro=Lucro:
 financeiro.crescimento=Crescimento:
 financeiro.editar=Editar
-financeiro.deletar=Deletar
 financeiro.criar_novo=Criar Desempenho Financeiro
 
 historico.contrato=Contrato Assinado:
 historico.proposta=Proposta de Negócio:
-historico.feedback=Feedback sobre Serviços/Produtos:
+historico.feedback=Feedback:
 historico.editar=Editar
-historico.deletar=Deletar
 historico.criar_novo=Criar Histórico de Interação
 
 negocios.titulo=Comportamento de Negócios
@@ -153,11 +153,17 @@ negocios.frequencia=Frequência de Uso:
 negocios.feedback=Feedback:
 negocios.uso_recursos=Uso de Recursos Específicos:
 negocios.editar=Editar
-negocios.deletar=Deletar
 negocios.criar_novo=Criar Comportamento de Negócios
 
 button.voltar=Voltar para a lista
 
+usuario.cadastro.titulo=Cadastro de Usuario
+usuario.nome=Nome
+usuario.username=Username
+usuario.senha=Senha
+usuario.permissoes=Permissões
+botao.cadastrar=Cadastrar
+botao.cancelar=Cancelar
 
 
 
